--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
             <img src="./img/MyImage.jpg" alt="my pic">
         </div>
         <form action="#" class="form">
-            <input type="text" placeholder="Username"><br>
-            <input type="password" placeholder="Password">
+            <input class="input" type="text" placeholder="Username"><br>
+            <input  class="input"type="password" placeholder="Password">
         </form>
-        <button>login</button>
-        <div>
-            <p>Forgot Username/Password</p>
-            <p>Don't have an account? Sign Up</p>
+        <button class="login">login</button>
+        <div class="reset">
+            <p>Forgot <span>Username/Password</span> </p>
+            <p>Don't have an account? <span>Sign Up</span> </p>
         </div>
     </div>
 </body>
